syntax = "proto3";

package task;

service TaskService {
  rpc CreateTask (CreateTaskRequest) returns (TaskResponse);
  rpc FindAllTasks (Empty) returns (TasksResponse);
  rpc CompleteTask (CompleteTaskRequest) returns (TaskResponse);
  rpc FindTaskById (FindByIdRequest) returns (TaskResponse);
  rpc UpdateTask (UpdateTaskRequest) returns (TaskResponse);
  rpc RemoveTask (FindByIdRequest) returns (Empty);
}

message Empty {}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
  int32 createdBy = 3;
}

message CompleteTaskRequest {
  int32 id = 1;
}

message FindByIdRequest {
  int32 id = 1;
}

message Task {
  int32 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
  int32 createdBy = 5;
  string createdAt = 6;
}

message TaskResponse {
  Task task = 1;
}

message TasksResponse {
  repeated Task tasks = 1;
}

message UpdateTaskRequest {
  int32 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
  int32 createdBy = 5;
}
